Update on Overleaf.

--- a/estilosexercicios.sty
+++ b/estilosexercicios.sty
@@ -15,7 +15,7 @@
 \usepackage{mathtext}
 \usepackage{wrapfig}
 \usepackage{cancel}
-
+\usepackage{arydshln} %dashed line nas matrizes
 \usepackage{tikz}
 \usepackage{setspace}
 \usepackage{lipsum}
