--- a/listas.tex
+++ b/listas.tex
@@ -3809,41 +3809,82 @@ encontre $k \in \mathbb{N}$ tal que $(AB - BA)^k = 0.$
   
   }
 
-\solucao{
-  \dividiritens{  
-  \task[\pers{a}] Sabemos que um vetor $v \in V$ é cíclico se $Z(v, T) = V,$ onde 
-  \[
-  Z(v,T) = \{ g(T)(v) | g(t) \in K[t] \}.
-  \]
-  
-  Equivalentemente, dizemos que $v \in V$ é cíclico se $\{v, T(v), T^2(v), \ldots, T^{n-1}(v) \}$ é uma base para $V.$
-  
-  
-  }
+\exercicio{1} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V).$
 
+\dividiritens{
+\task[\pers{a}] Prove que se existe um vetor cíclico para $T$ então todo subespaço próprio $T$-invariante de $V$ também tem um vetor cíclico.
+
+\task[\pers{b}] Vale a recíproca do item (a)? (Isto é, se todo subespaço próprio $T$-invariante $W$ de $V$tem um vetor cíclico para $T_W,$ é verdade que existe um vetor cíclico para $T$?)
 }
 
-   \exercicio{2} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V).$ Prove que se $T^2$ tem um vetor
+\solucao{
+\dividiritens{  
+\task[\pers{a}] Sabemos que um vetor $v \in V$ é cíclico se $Z(v, T) = V,$ onde 
+\[
+Z(v,T) = \{ g(T)(v) \mid g(t) \in K[t] \}.
+\]
+Para subespaço $W$ que seja $T$-invariante, então seja $\{e_1,\dots,e_m\}$ uma base de $W$. Para todo $i$ então existe um polinômio $p_i$ tal que $e_i=p_i(T)(v)$. Seja $p=\mathrm{mdc}{p_1,\dots,p_m}$. Então por Bézout existem polinômios $q_1,\dots,q_m$ tais que $p_1q_1+\dots+p_mq_m=p$, assim
+\[
+p(T)(v)=q_1(T)(e_1)+\dots+q_m(T)(e_m)\in W,
+\]
+aí, como $p\mid p_i$ para todo $i$, então, sendo $w=p(T)(v)$, temos $W=Z(w,T)$.
+\task[\pers{b}] A recíproca não é verdadeira. Seja $V=K^2$ e $T=I$. Então para todo $v\in V$ temos $Z(v,T)=Kv$. Todo subespaço próprio $T$-invariante tem dimensão no máximo $1$, assim é da forma $Ke=Z(e,T)$. Por outro lado, é fácil ver que para todo $v\in V$ temos $Z(v,T)=Kv\neq V$.
+}
+}
+
+
+\exercicio{2} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V).$ Prove que se $T^2$ tem um vetor
 cíclico, então $T$ tem um vetor cíclico. Vale a recíproca?
   
 \solucao{Seja $n = \dim V.$ Se $v$ é um vetor cíclico para $T^2,$ isso quer dizer que $V = Z(v,T^2).$ Vejamos que $Z(v, T^2) \subseteq Z(v, T). $
 \[
-Z(v,T^2) = \{ g(T^2)(v) | g(t) \in K[t] \} = \langle v, T^2(v), T^4(v), \ldots \rangle \subseteq  \langle v, T(v), T^2(v), \ldots, T^{n-1}(v) \rangle = Z(v, T)
-\]Logo, concluímos que
+Z(v,T^2) = \{ g(T^2)(v) \mid g(t) \in K[t] \} = \langle v, T^2(v), T^4(v), \ldots \rangle \subseteq  \langle v, T(v), T^2(v), \ldots\rangle = Z(v, T).
+\]
+Logo, concluímos que
 \[
 \textcolor{RawSienna}{Z(v,T^2)} \subseteq  Z(v, T) \Rightarrow \textcolor{RawSienna}{V} \subseteq  Z(v, T) \Rightarrow \boxed{Z(v,T) = V}
 \]
 Assim, $v$ é um vetor cíclico para $T.$
 
-Observe que a recíproca não é verdadeira. Tome $T = \begin{bmatrix}
-0 & 1 \\ 1 & 0 \end{bmatrix}.$ Então $v = (1,0)$ é um vetor cíclico para $T,$ mas $T^2 = I,$ que não possui um vetor cíclico.
+\medskip
+\noindent
+Observe que a recíproca não é verdadeira. Tome:
+\[
+T = \begin{bmatrix}
+0 & 1 \\ 1 & 0 \end{bmatrix}.
+\]
+Então $v = (1,0)$ é um vetor cíclico para $T,$ mas $T^2 = I,$ que não possui um vetor cíclico.
 }
-    \exercicio{3} Sejam $V$ um $K$-espaço vetorial de dimensão $n$ e $T \in \mathcal{L}(V)$ um operador diagonalizável.
+
+\exercicio{3} Sejam $V$ um $K$-espaço vetorial de dimensão $n$ e $T \in \mathcal{L}(V)$ um operador diagonalizável.
 \dividiritens{
 \task[\pers{a}] Mostre que existe um vetor cíclico para $T$ se, e somente se, $T$ tem $n$ autovalores distintos.
 \task[\pers{b}] Mostre que se $T$ tem $n$ autovalores distintos e se $\{v_1, \ldots , v_n\}$ é uma base de autovetores de $T,$ então $v = v_1 + v_2 + \ldots + v_n$ é um vetor cíclico para $T.$  
- } 
- \solucao{}
+}
+\solucao{
+\dividiritens{
+\task[\pers{a}] Se existe $v\in V$ tal que $V=Z(v,T)$, então $\{v,T(v),\dots,T^{n-1}(v)\}$ é base de $V$, aí $m_T$ tem grau $n$, e sendo $\lambda_1,\dots,\lambda_r$ os autovalores distintos, então:
+\[
+m_T(t)=(t-\lambda_1)\dots(t-\lambda_r),
+\]
+aí $m_T$ tem grau $r$, aí $r=n$, assim $T$ tem $n$ autovalores distintos. A recíproca será resolvida no item (b).
+
+\task[\pers{b}] Se $T$ tem $n$ autovalores distintos e se $\{v_1, \ldots , v_n\}$ é uma base de autovetores de $T,$ então para cada $i$ existe $\lambda_i$ tal que $T(v_i)=\lambda_iv_i$; assim $\lambda_1,\dots,\lambda_n$ devem ser distintos, aí para cada $i$ seja:
+\[
+q_i(t)=\prod_{j\neq i}(t-\lambda_j),\quad p_i(t)=\frac{q_i(t)}{q_i(\lambda_i)},
+\]
+então:
+\[
+\begin{array}{rcl}
+v_i&=&p_i(\lambda_1)v_1+\dots+p_i(\lambda_n)v_n\\
+&=&p_i(T)v_1+\dots+p_i(T)v_n\\
+&=&p_i(T)(v_1+\dots+v_n);
+\end{array}
+\]
+logo $v_1+\dots+v_n$ é um vetor cíclico para $T$.
+}
+}
+
     \exercicio{4} Prove que duas matrizes de ordem $3$ são semelhantes se, e somente se, elas têm o mesmo polinômio característico e o mesmo polinômio minimal.
  \solucao{}
     \exercicio{5} Prove que toda matriz $A \in \mathcal{M}_n(K)$ é semelhante à sua transposta $A^t.$
@@ -3893,13 +3934,26 @@ minimal e o mesmo posto. Prove que elas são semelhantes. Mostre que o mesmo res
     \end{bmatrix},
     \]
     onde $I \in \mathcal{M}_k(\mathbb{R})$ é a matriz identidade.
- \solucao{}
-    \exercicio{11} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V).$ Prove que $T$ tem um vetor cíclico se, e somente se a seguinte afirmação é verdadeira: “Todo operador linear que comuta com $T$ é um polinômio em $T.$"
-     \solucao{}
-    \exercicio{12} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V).$ Prove que todo vetor não
+\solucao{}
+
+\exercicio{11} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V).$ Prove que $T$ tem um vetor cíclico se, e somente se a seguinte afirmação é verdadeira: ``Todo operador linear que comuta com $T$ é um polinômio em $T.$''
+
+\solucao{
+\dividiritens{
+\task[\pers{a}] Se $T$ tem um vetor cíclico, então, para todo operador linear $U$ que comuta com $T$, o conjunto $W=\mathrm{Im}(U)$ é um subespaço $T$-invariante, aí pelo Exercício 1 da Lista 4 existe $w$ tal que $W=Z(w,T)$, aí existe um polinômio $p$ tal que $U(v)=p(T)(w)$, aí para todo $k$ temos:
+\[
+UT^k(v)=T^kU(v)=T^kp(T)(v)=p(T)T^k(v);
+\]
+logo, como $\{v,T(v),T^2(v)\dots\}$ gera $V$, então $U=p(T)$.
+}
+}
+
+\exercicio{12} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V).$ Prove que todo vetor não
 nulo $v \in V $é um vetor cíclico para $T$ se, e somente se, o polinômio característico de $T$ é irredutível em $K[t].$
-        \solucao{}
-    \exercicio{13} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V).$ Suponha que o polinômio
+
+\solucao{}
+
+\exercicio{13} Sejam $V$ um $K$-espaço vetorial de dimensão finita e $T \in \mathcal{L}(V).$ Suponha que o polinômio
 minimal de $T$ é igual ao polinômio característico de $T$ e é uma potência de um polinômio irredutível. Prove que nenhum subespaço não trivial de $V$ invariante sob $T$ tem um complementar que também é invariante sob $T.$  
             \solucao{}
     \exercicio{14} Determine a forma racional $R$ da matriz
@@ -4004,8 +4058,147 @@ Determine a forma de Jordan $J$ de $A$ e encontre uma matriz inversível $P$ tal
 \end{bmatrix} \right) = \lambda^4 + \lambda^2 \Rightarrow p_A(\lambda) = \lambda^2(\lambda + i)(\lambda - i)
                  \]
 
-Sabemos que o polinômio minimal é o polinômio de menor grau que anula $T.$ Além disso, $m_A(t) \mid p_A(t).$               
-                 
+Sabemos que o polinômio minimal é o polinômio de menor grau que anula $T.$ Além disso, $m_A(t) \mid p_A(t).$ Nesse caso, uma inspeção direta mostra que $m_A(t) = p_A(t) = \lambda^2(\lambda + i)(\lambda - i).$ Portanto, os autovalores de $A$ são $0, i$ e $-i.$ A quantidade de vezes que cada um aparecerá em $J$ é exatamente sua multiplicidade algébrica, ou seja, a multiplicidade em $p_a(t).$ Desse modo, já sabemos que $0$ aparecerá duas vezes, enquanto $i$ e $-i$ aparecerão uma vez cada. Resta-nos agora determinar quantos blocos de Jordan estão associados a cada autovalor.        
+
+Para isso, vamos calcular a dimensão de cada autoespaço associado. Temos:
+\begin{itemize}
+    \item $\dim(\Ker(A^2)) =2$. Observe que $A^2$ possui 2 linhas linearmente independentes:
+    \[ \begin{bmatrix}
+0 & 1 & 0& 0\\
+0 &0 &1 & 0 \\
+0 &0 &0& 1 \\
+0 & 0 & -1&0
+\end{bmatrix}^2 = \begin{bmatrix}
+0 & 0 & 1& 0\\
+0 &0 &0 & 1 \\
+0 &0 &-1& 0 \\
+0 & 0 & 0&-1
+\end{bmatrix}  \xrightarrow[]{\substack{L_3 = L_3 +L_1 \\L_4 = L_4 +L_2}}  \begin{bmatrix}
+0 & 0 & 1& 0\\
+0 &0 &0 & 1 \\
+\textcolor{Blue}{0} & \textcolor{Blue}{0} & \textcolor{Blue}{0}&\textcolor{Blue}{0}\\
+\textcolor{Blue}{0} & \textcolor{Blue}{0} & \textcolor{Blue}{0}&\textcolor{Blue}{0}
+\end{bmatrix} 
+    \]
+    Logo, $\mbox{posto}(A) = 2,$ e portanto 
+    \[\dim(\Ker(A)) = 4 - \mbox{posto}(A)  \Rightarrow \dim(\Ker(A)) = 4 - 2 \Rightarrow \dim(\Ker(A)) = 2
+    \]
+Encontremos os autovetores que geram $\Ker(A^2).$ Temos que:
+\[
+\begin{bmatrix}
+0 & 1 & 0& 0\\
+0 &0 &1 & 0 \\
+0 &0 &0& 0 \\
+0 & 0 & 0 & 0
+\end{bmatrix} \begin{bmatrix} x \\ y \\ z \\w  \end{bmatrix} = \begin{bmatrix} 0 \\ 0 \\ 0 \\0  \end{bmatrix} \Rightarrow (x,y,z,w) = x \cdot (1,0,0,0) + y \cdot (0,1,0,0)
+\]
+Logo, $\Ker(A) = \langle (1,0,0,0), (0,1,0,0) \rangle.$
+    \item $\dim(\Ker(A - iI)) = 1.$ Temos que
+    \[
+    A - iI = \begin{bmatrix}
+0 & 1 & 0& 0\\
+0 &0 &1 & 0 \\
+0 &0 &0& 1 \\
+0 & 0 & -1&0
+\end{bmatrix} - \begin{bmatrix}
+i & 0 & 0& 0\\
+0 &i &0 & 0 \\
+0 &0 &i& 0 \\
+0 & 0 & 0&i
+\end{bmatrix} = \begin{bmatrix}
+-i & 1 & 0& 0\\
+0 &-i &1 & 0 \\
+0 &0 &-i& 1 \\
+0 & 0 & -1&-i
+\end{bmatrix} \xrightarrow[]{L_4 = L_4 -iL_3} \begin{bmatrix}
+-i & 1 & 0& 0\\
+0 &-i &1 & 0 \\
+0 &0 &-i& 1 \\
+\textcolor{Blue}{0} & \textcolor{Blue}{0} & \textcolor{Blue}{0}& \textcolor{Blue}{0}
+\end{bmatrix}
+    \]
+    
+    Portanto, $\mbox{posto}(A - iI) = 3,$ e $\dim(\Ker(A - iI)) = 1.$ Encontremos agora um autovetor que gera $\Ker(A - iI).$ Para isso, basta resolver o sistema
+    \[
+     \begin{bmatrix}
+-i & 1 & 0& 0\\
+0 &-i &1 & 0 \\
+0 &0 &-i& 1 \\
+0 & 0 &0& 0\end{bmatrix} \begin{bmatrix} x \\ y \\ z \\ w\end{bmatrix} = \begin{bmatrix} 0 \\ 0\\ 0 \\ 0\end{bmatrix}
+     \Rightarrow (x,y,z,w) = w \cdot (i, -1, -i, 1)\]
+     Portanto, $\Ker(A  - iI) = \langle (i, -1, -i, 1) \rangle.$
+      \item $\dim(\Ker(A + iI)) = 1.$ Temos que
+    \[
+    A + iI = \begin{bmatrix}
+0 & 1 & 0& 0\\
+0 &0 &1 & 0 \\
+0 &0 &0& 1 \\
+0 & 0 & -1&0
+\end{bmatrix} + \begin{bmatrix}
+i & 0 & 0& 0\\
+0 &i &0 & 0 \\
+0 &0 &i& 0 \\
+0 & 0 & 0&i
+\end{bmatrix} = \begin{bmatrix}
+i & 1 & 0& 0\\
+0 &i &1 & 0 \\
+0 &0 &i& 1 \\
+0 & 0 & -1&i
+\end{bmatrix} \xrightarrow[]{L_4 = L_4 +iL_3} \begin{bmatrix}
+i & 1 & 0& 0\\
+0 &i &1 & 0 \\
+0 &0 &i& 1 \\
+\textcolor{Blue}{0} & \textcolor{Blue}{0} & \textcolor{Blue}{0}& \textcolor{Blue}{0}
+\end{bmatrix}
+    \]
+    
+    Portanto, $\mbox{posto}(A + iI) = 3,$ e $\dim(\Ker(A + iI)) = 1.$ Encontremos agora um autovetor que gera $\Ker(A + iI).$ Para isso, basta resolver o sistema
+    \[
+     \begin{bmatrix}
+i & 1 & 0& 0\\
+0 &i &1 & 0 \\
+0 &0 &i& 1 \\
+0 & 0 &0& 0\end{bmatrix} \begin{bmatrix} x \\ y \\ z \\ w\end{bmatrix} = \begin{bmatrix} 0 \\ 0\\ 0 \\ 0\end{bmatrix}
+     \Rightarrow (x,y,z,w) = w \cdot (-i, -1, i, 1)\]
+     Portanto, $\Ker(A  - iI) = \langle (-i, -1, i, 1) \rangle.$
+\end{itemize}
+
+Portanto, a forma de Jordan de $A$ será
+\[
+J = \begin{bmatrix} \textcolor{Blue}{J_{0}} & 0 & 0 \\ 0 & \textcolor{Green}{J_{i}} & 0 \\  0 & 0  & \textcolor{Red}{J_{-i}}\end{bmatrix}
+ = \begin{bmatrix}  \textcolor{Blue}{0} & \textcolor{Blue}{1} & 0 & 0\\ \textcolor{Blue}{0} & \textcolor{Blue}{0} & 0 & 0 \\ 0 & 0 & \textcolor{Green}{i} & 0 \\ 0 & 0 & 0 & \textcolor{Red}{-i} \end{bmatrix}\]
+ 
+ Para encontrar a matriz $P,$ basta colocar na $i$-ésima coluna o autovetor que gera o respectivo autoespaço associado ao autovalor da $i$-ésima coluna de $J.$ Assim,
+ \[
+ P = \begin{bmatrix} \textcolor{Blue}{1} & \textcolor{Blue}{0} & \textcolor{Green}{i} & \textcolor{Red}{-i} \\
+ \textcolor{Blue}{0} & \textcolor{Blue}{1} & \textcolor{Green}{-1} & \textcolor{Red}{-1} \\
+ \textcolor{Blue}{0} & \textcolor{Blue}{0} & \textcolor{Green}{-i} & \textcolor{Red}{i} \\
+ \textcolor{Blue}{0} & \textcolor{Blue}{0} & \textcolor{Green}{1} & \textcolor{Red}{1} \\ \end{bmatrix}.
+ \]
+ De fato,
+ \[
+ P^{-1}AP = \left(\begin{matrix}
+1 & 0 & 1 & 0 \\
+0 & 1 & 0 & 1 \\
+0 & 0 & \frac{i}{2} & \frac{1}{2} \\
+0 & 0 & -\frac{i}{2} & \frac{1}{2}
+\end{matrix}\right) \left(\begin{matrix}
+0 & 1 &0 & 0 \\
+0 &0 & 0 & 0 \\
+0 & 0 & 0 &1 \\
+0 & 0 & -1 & 0
+\end{matrix}\right) \left(\begin{matrix}
+1 & 0 & i & -i \\
+0 & 1 & -1 & -1 \\
+0 & 0 & -i & i \\
+0 & 0 & 1 & 1
+\end{matrix}\right) = \left(\begin{matrix}
+0 & 1 & 0 & 0 \\
+0 & 0 & 0 & 0 \\
+0 & 0 & i & 0 \\
+0 & 0 & 0 & -i
+\end{matrix}\right)
+ \]
                  }
     \exercicio{23} Seja $V$ um espaço vetorial de dimensão $n$, com $n \ge 2$ e seja $T$ um operador linear em $V$ de posto $2.$ Determine todas as possíveis formas de Jordan de $T.$
                  \solucao{}
@@ -4033,8 +4226,108 @@ e $a \neq b.$ Determine a forma racional e a forma de Jordan de $T.$
 \solucao{}
 \exercicio{27} Classifique, a menos de semelhança, todas as matrizes reais de ordem $7$ com polinômio
 característico 
-\[p_T(t) = (t - 1)^4(t - 2)^2(t - 1).\]
-\solucao{}
+\[p_T(t) = (t - 1)^4(t - 2)^2(t - 3).\]
+\solucao{Sabemos que duas matrizes são semelhantes se, e somente se, possuem a mesma forma de Jordan. Logo, todas as matrizes reais de ordem $7$ serão semelhantes a uma das formas de Jordan determinadas pelo operador $T \colon \mathbb{R}^7 \to \mathbb{R}^7$ que possui o polinômio característico acima. Daí, observe que
+\begin{itemize}
+\item Como $t-1$ tem expoente $4$ em $p_T(t),$ o autovalor $1$ deve aparecer quatro vezes na diagonal principal;
+\item Como $t-2$ tem expoente $2$ em $p_T(t),$ o autovalor $2$ deve aparecer duas vezes na diagonal principal;
+\item Como $t-3$ tem expoente $2$ em $p_T(t),$ o autovalor $3$ deve aparecer uma vez na diagonal principal.
+\end{itemize}
+Assim, as formas canônicas de Jordan possíveis são:
+\[
+\left(\begin{array}{cccc:cc:c}
+1 & 1 & 0 & 0 & 0 & 0 & 0\\
+0 & 1 & 1 & 0 & 0 & 0 & 0 \\
+0 & 0 & 1 & 1 & 0 & 0 & 0 \\
+0 & 0 & 0 & 1 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 2 & 1 & 0 \\
+0 & 0 & 0 & 0 & 0 & 2 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 0 & 3
+\end{array}\right) \quad
+\left(\begin{array}{ccc:c:cc:c}
+1 & 1 & 0 & 0 & 0 & 0 & 0\\
+0 & 1 & 1 & 0 & 0 & 0 & 0 \\
+0 & 0 & 1 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 1 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 2 & 1 & 0 \\
+0 & 0 & 0 & 0 & 0 & 2 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 0 & 3
+\end{array}\right) \quad
+\left(\begin{array}{cc:cc:cc:c}
+1 & 1 & 0 & 0 & 0 & 0 & 0\\
+0 & 1 & 0 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 1 & 1 & 0 & 0 & 0 \\ 
+0 & 0 & 0 & 1 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 2 & 1 & 0 \\
+0 & 0 & 0 & 0 & 0 & 2 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 0 & 3
+\end{array}\right) \]\[
+\left(\begin{array}{cc:c:c:cc:c}
+1 & 1 & 0 & 0 & 0 & 0 & 0\\
+0 & 1 & 0 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 1 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 1 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 2 & 1 & 0 \\
+0 & 0 & 0 & 0 & 0 & 2 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 0 & 3
+\end{array}\right) \quad
+\left(\begin{array}{c:c:c:c:cc:c}
+1 & 0 & 0 & 0 & 0 & 0 & 0\\ \hdashline
+0 & 1 & 0 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 1 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 1 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 2 & 1 & 0 \\
+0 & 0 & 0 & 0 & 0 & 2 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 0 & 3
+\end{array}\right)  \]\[
+\left(\begin{array}{cccc:c:c:c}
+1 & 1 & 0 & 0 & 0 & 0 & 0\\
+0 & 1 & 1 & 0 & 0 & 0 & 0 \\
+0 & 0 & 1 & 1 & 0 & 0 & 0 \\
+0 & 0 & 0 & 1 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 2 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 2 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 0 & 3
+\end{array}\right) \quad
+\left(\begin{array}{ccc:c:c:c:c}
+1 & 1 & 0 & 0 & 0 & 0 & 0\\
+0 & 1 & 1 & 0 & 0 & 0 & 0 \\
+0 & 0 & 1 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 1 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 2 & 0 & 0 \\  \hdashline
+0 & 0 & 0 & 0 & 0 & 2 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 0 & 3
+\end{array}\right) \quad
+\left(\begin{array}{cc:cc:c:c:c}
+1 & 1 & 0 & 0 & 0 & 0 & 0\\
+0 & 1 & 0 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 1 & 1 & 0 & 0 & 0 \\ 
+0 & 0 & 0 & 1 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 2 & 0 & 0 \\  \hdashline
+0 & 0 & 0 & 0 & 0 & 2 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 0 & 3
+\end{array}\right) \]\[
+\left(\begin{array}{cc:c:c:c:c:c}
+1 & 1 & 0 & 0 & 0 & 0 & 0\\
+0 & 1 & 0 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 1 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 1 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 2 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 2 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 0 & 3
+\end{array}\right) \quad
+\left(\begin{array}{c:c:c:c:c:c:c}
+1 & 0 & 0 & 0 & 0 & 0 & 0\\ \hdashline
+0 & 1 & 0 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 1 & 0 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 1 & 0 & 0 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 2 & 0 & 0 \\  \hdashline
+0 & 0 & 0 & 0 & 0 & 2 & 0 \\ \hdashline
+0 & 0 & 0 & 0 & 0 & 0 & 3
+\end{array}\right)  \quad
+\]
+
+}
 \exercicio{28} Determine a forma racional e a forma de Jordan da matriz real
 \[
 A  =\begin{bmatrix}
@@ -4058,7 +4351,21 @@ verdade que $d \mid n?$ Justifique.
 
 \textcolor{Red}{Questões Suplementares}
 
-\exercicio{31} 
+\exercicio{31} Seja $V$ um espaço vetorial de dimensão $n$ e considere $T \colon V \to V$ cuja matriz na base canônica é $A \in \mathcal{M}_n(\mathbb{R}),$ que possui como polinômio característico
+\[
+p_A(t) = (t - \lambda_1)^{P(a_1)} \cdot (t - \lambda_2)^{P(a_2)} \cdot \ldots \cdot (t - \lambda_k)^{P(a_k)},
+\]
+onde $P(k)$ representa o $k$-ésimo número pentagonal, e $(a_n)_{n \ge 1}$ é a sequência definida recursivamente por
+\[\begin{cases}
+a_1 = 2,\\
+a_{n+1} = 7n - a_{n} - 9, \forall n > 1
+\end{cases}\]
+\dividiritens{
+\task[\pers{a}] Prove que $n$ não pode ser $2019.$ %dica mod 17
+%(\sum\limits_{k=0}^n \frac{3(7k+2)^2 -(7k+2)}{2}) + (\sum\limits_{k=0}^n \frac{3(7k+3)^2 -(7k+3)}{2}) =  \frac{(n+1)}{2} ( 98n^2 + 147n + 34) = \frac{1}{2} (98n^3 +245n^2 + 181n + 34) ou
+%49n^3+196n^2+276n+134
+\task[\pers{b}] Mostre que a quantidade de formas de Jordan que a matriz $A$ pode ter é um múltiplo de $7.$ 
+}
 \solucao{}
 \newpage
 \section{\textcolor{Floresta}{Lista 5}}
